--- a/leaks/index.html
+++ b/leaks/index.html
@@ -59,7 +59,7 @@
 		<br>
 		</div>
       <div class="video_section" id="video">
-	  	<center><img class="img img-fluid" src="main.jpeg"></center>
+	  	<center><img class="img img-fluid" src="main.jpg"></center>
         <div class="video_player videoPlayerBtn">
 		  <span id="play" class="play-btn-border ease"><i class="fa fa-play-circle headline-round ease" aria-hidden="true"></i></span>
         </div>
@@ -217,7 +217,7 @@
       <div class="modal-body">
         <div class="row">
 			<div class="col-md-6">
-			<div><img class="img-fluid" src="main.jpeg" alt="image"></div>
+			<div><img class="img-fluid" src="main.jpg" alt="image"></div>
 			   
 				<h5>Member Login</h5>
 				<div class="form-group">
