--- a/nfl/register.html
+++ b/nfl/register.html
@@ -1,7 +1,6 @@
 <html>
 
-<!-- Mirrored from mcqgovexpress.online/NFL/register.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 08 Sep 2024 16:17:04 GMT -->
-<body><META HTTP-EQUIV="Refresh" CONTENT="0;URL=https://mghkpg.com/af?o=399990a5fc7bf6f73175c784d9fe0e47:5add9dafaf384e7e314b5581c2147916&amp;v=nfl"></body>
+<body><META HTTP-EQUIV="Refresh" CONTENT="0;URL=https://trk.affitracks1.xyz/2c5ced3b-b618-444d-8376-a79027f8ce32"></body>
 
-<!-- Mirrored from mcqgovexpress.online/NFL/register.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 08 Sep 2024 16:17:04 GMT -->
+
 </html>
