--- a/nfl/ThursdayNightFootball/index.html
+++ b/nfl/ThursdayNightFootball/index.html
@@ -11,8 +11,8 @@
 	<meta name="keywords" content="">
     <meta name="author" content="">
 	
-	<link href="https://imgur.com/YObo4dq.html" rel="icon" type="image/ico">
-	<link href="https://imgur.com/YObo4dq.html" rel="icon" type="image/png">
+	<link href="favicon.png" rel="icon" type="image/ico">
+	<link href="favicon.png" rel="icon" type="image/png">
 
     <title>NFL Live Stream</title>
     <meta name="description" content="NFL Live Stream  on Today Live Stream Online Without Buffering. Support Android, iPhone, iPad, Tablet." />
